Fix text alignment

--- a/src/components/auth/signIn/email/SignInEmailButton.module.sass
+++ b/src/components/auth/signIn/email/SignInEmailButton.module.sass
@@ -16,5 +16,6 @@
     background-color: #E13D39 
     padding: 0 $space_tiny
     color: white
+    text-align: center
     border-radius: 1.6875rem
     min-width: 62px
