--- a/src/components/auth/signIn/email/SignInModalContent.module.sass
+++ b/src/components/auth/signIn/email/SignInModalContent.module.sass
@@ -20,6 +20,7 @@
 
 .ConfirmationStepContent
     @extend .SignInModalContent
+    align-items: center
     gap: $space_big
 
 
